WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307545
StreamTeeState does not need to observe context destruction
https://bugs.webkit.org/show_bug.cgi?id=307545
Summary
StreamTeeState does not need to observe context destruction
youenn fablet
Reported
2026-02-11 06:42:30 PST
StreamTeeState does not need to observe context destruction
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-11 06:42:41 PST
<
rdar://problem/170143808
>
youenn fablet
Comment 2
2026-02-11 06:45:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58400
EWS
Comment 3
2026-02-12 03:48:54 PST
Committed
307355@main
(d01d9e5bf607): <
https://commits.webkit.org/307355@main
> Reviewed commits have been landed. Closing PR #58400 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug