StreamTeeState does not need to observe context destruction rdar://170143808 https://bugs.webkit.org/show_bug.cgi?id=307545

Reviewed by Chris Dumez.

Instead of observing context destruction, we can tell StreamTeeState to stop when its related ReaadableStream gets stopped.
This allows to simplify the code a little bit and do things somehow earlier as well.

Covered by existing tests.

Canonical link: https://commits.webkit.org/307355@main